--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/material-top-tabs": "^5.1.14",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
+    "@types/react-native-vector-icons": "^6.4.5",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
@@ -30,6 +31,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-native-tab-view": "^2.14.0",
+    "react-native-vector-icons": "^6.6.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
