--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/runtime": "^7.9.2",
     "@react-native-community/eslint-config": "^1.0.0",
     "@types/node": "^10.0.3",
+    "@types/react-native": "^0.62.5",
     "babel-jest": "^25.3.0",
     "eslint": "^6.8.0",
     "gts": "^2.0.0",
