--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "@types/jest": "^25.2.1",
     "@react-navigation/bottom-tabs": "^5.3.3",
+    "@react-native-community/masked-view": "^0.1.9",
+    "@react-navigation/native": "^5.1.5",
+    "@react-navigation/stack": "^5.2.10",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
