--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^25.2.1",
     "@react-navigation/bottom-tabs": "^5.3.3",
     "@react-native-community/masked-view": "^0.1.9",
+    "@react-navigation/material-top-tabs": "^5.1.14",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "react": "16.11.0",
@@ -28,6 +29,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
+    "react-native-tab-view": "^2.14.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
