--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "check": "gts check",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "yarn run compile",
+    "pretest": "yarn run compile",
+    "posttest": "yarn run check"
   },
   "dependencies": {
     "@types/jest": "^25.2.1",
@@ -24,7 +31,10 @@
     "eslint": "^6.8.0",
     "jest": "^26.0.1",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.11.0"
+    "react-test-renderer": "16.11.0",
+    "tslint": "^6.1.2",
+    "gts": "^2.0.0",
+    "@types/node": "^10.0.3"
   },
   "jest": {
     "preset": "react-native"
