--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@types/jest": "^25.2.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.7.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
@@ -27,14 +31,14 @@
     "@babel/preset-typescript": "^7.9.0",
     "@babel/runtime": "^7.9.2",
     "@react-native-community/eslint-config": "^1.0.0",
+    "@types/node": "^10.0.3",
     "babel-jest": "^25.3.0",
     "eslint": "^6.8.0",
+    "gts": "^2.0.0",
     "jest": "^26.0.1",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.11.0",
-    "tslint": "^6.1.2",
-    "gts": "^2.0.0",
-    "@types/node": "^10.0.3"
+    "tslint": "^6.1.2"
   },
   "jest": {
     "preset": "react-native"
