--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/jest": "^25.2.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/preset-typescript": "^7.9.0",
     "@babel/runtime": "^7.9.2",
     "@react-native-community/eslint-config": "^1.0.0",
     "babel-jest": "^25.3.0",
     "eslint": "^6.8.0",
-    "jest": "^25.3.0",
+    "jest": "^26.0.1",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.11.0"
   },
